--- a/css/navbar.css
+++ b/css/navbar.css
@@ -78,4 +78,10 @@
   .navbar-toggle {
     display: flex;
   }
+
+  .logo-text img {
+    height: 32px;
+    width: auto;
+    vertical-align: middle;
+  }
 }
