--- a/css/style.css
+++ b/css/style.css
@@ -75,15 +75,28 @@ main {
 }
 
 /* Logo */
+.navbar {
+  display: flex;
+  align-items: center;
+  padding: 10px 20px;
+  background: #0A1232;
+}
+
 .logo {
-  margin-left: 10px;
+  display: flex;
+  align-items: center;
+  gap: 12px; /* 圖片之間的間距 */
 }
 
 .logo img {
-  height: 48px;
+  height: 32px;
   width: auto;
-  vertical-align: middle;
 }
+
+.logo-text {
+  height: 14px; /* 可依文字 Logo 調整 */
+}
+
 
 /* 漢堡按鈕 */
 .navbar-toggle {
@@ -126,7 +139,7 @@ main {
 }
 
 /* 手機版樣式 */
-@media (max-width: 938px) {
+@media (max-width: 1124px) {
   .navbar {
     flex-wrap: wrap;
     padding: 10px 20px;
@@ -158,6 +171,7 @@ main {
     width: 100%;
     text-align: center;
   }
+
 }
 
 .hero-section {
@@ -580,6 +594,7 @@ main {
   box-shadow: 0 0 15px rgba(0, 255, 255, 0.5);
   object-fit: cover;
 }
+
 .team-grid {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
@@ -790,7 +805,8 @@ select:focus {
 }
 
 /* Footer */
-html, body {
+html,
+body {
   height: 100%;
   margin: 0;
 }
@@ -1395,6 +1411,12 @@ footer {
     flex-direction: row;
     justify-content: space-between;
   }
+
+  .logo-text img {
+    height: 32px;
+    width: auto;
+    vertical-align: middle;
+  }
 }
 
 @media (max-width: 768px) {
@@ -1873,7 +1895,8 @@ body {
 #preloader {
   position: fixed;
   inset: 0;
-  background: rgb(0, 0, 0); /* 或黑色、漸層都可以 */
+  background: rgb(0, 0, 0);
+  /* 或黑色、漸層都可以 */
   z-index: 9999;
   display: flex;
   justify-content: center;
@@ -1919,26 +1942,56 @@ body {
 .cube:nth-child(2) {
   animation-delay: calc(var(--uib-speed) * -0.36);
 }
+
 .cube:nth-child(2) .cube__inner {
   animation-delay: calc(var(--uib-speed) * -0.36);
 }
+
 .cube:nth-child(3) {
   animation-delay: calc(var(--uib-speed) * -0.2);
 }
+
 .cube:nth-child(3) .cube__inner {
   animation-delay: calc(var(--uib-speed) * -0.2);
 }
 
 /* 動畫 keyframes */
 @keyframes jump {
-  0%, 30%, 75% { transform: translateY(0); }
-  50% { transform: translateY(-200%); }
+
+  0%,
+  30%,
+  75% {
+    transform: translateY(0);
+  }
+
+  50% {
+    transform: translateY(-200%);
+  }
 }
+
 @keyframes morph {
-  0%, 10%, 40%, 70%, 85%, 100% { transform: scaleY(1); }
-  20%, 25% { transform: scaleY(0.6) scaleX(1.3); }
-  30% { transform: scaleY(1.15) scaleX(0.9); }
-  75% { transform: scaleY(0.8) scaleX(1.2); }
+
+  0%,
+  10%,
+  40%,
+  70%,
+  85%,
+  100% {
+    transform: scaleY(1);
+  }
+
+  20%,
+  25% {
+    transform: scaleY(0.6) scaleX(1.3);
+  }
+
+  30% {
+    transform: scaleY(1.15) scaleX(0.9);
+  }
+
+  75% {
+    transform: scaleY(0.8) scaleX(1.2);
+  }
 }
 
 #preloader {
@@ -1973,7 +2026,8 @@ body {
 
 @media (max-width: 768px) {
   .preloader-cube {
-    --uib-size: 60px; /* 放大 cube 尺寸 */
+    --uib-size: 60px;
+    /* 放大 cube 尺寸 */
   }
 
   .preloader-logo {
